--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,11 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: go build -v ./...
+      run: go build -o app
 
     - name: Test
       run: go test -v ./...
+
 
   docker:
     runs-on: ubuntu-latest
